Basic functionality - get current and forecast weather, display results

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#4fc3f7</color>
+    <color name="blue_light">#8bf6ff</color>
+    <color name="blue_dark">#0093c4</color>
+    <color name="sand_yellow">#fff9c4</color>
+    <color name="sand_dark">#cbc693</color>
+    <color name="sand_light">#fffff7</color>
 </resources>
