--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,30 +1,36 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:width="@dimen/icon_large"
+    android:height="@dimen/icon_large"
+    android:viewportWidth="472.12292"
+    android:viewportHeight="472">
+    <group
+        android:scaleY="0.5"
+        android:scaleX="0.5"
+        android:translateX="118"
+        android:translateY="118">
+        <path
+            android:pathData="m416.121,176.063c0,57.438 -46.559,104 -104,104 -57.438,0 -104,-46.563 -104,-104s46.563,-104 104,-104c57.441,0 104,46.563 104,104zM416.121,176.063"
+            android:fillColor="@color/gold" />
+        <path
+            android:pathData="m464.121,184.063h-16c-4.418,0 -8,-3.582 -8,-8s3.582,-8 8,-8h16c4.422,0 8,3.582 8,8s-3.578,8 -8,8zM464.121,184.063"
+            android:fillColor="@color/gold" />
+        <path
+            android:pathData="m296.121,48.063c-4.418,0 -8,-3.582 -8,-8v-16c0,-4.418 3.582,-8 8,-8 4.422,0 8,3.582 8,8v16c0,4.418 -3.578,8 -8,8zM296.121,48.063"
+            android:fillColor="@color/gold" />
+        <path
+            android:pathData="m408.121,88.063c-3.234,0 -6.148,-1.949 -7.387,-4.941 -1.238,-2.988 -0.555,-6.426 1.734,-8.715l16,-16c2.008,-2.082 4.98,-2.914 7.777,-2.184 2.797,0.734 4.98,2.918 5.715,5.715 0.73,2.797 -0.102,5.77 -2.184,7.781l-16,16c-1.5,1.5 -3.531,2.344 -5.656,2.344zM408.121,88.063"
+            android:fillColor="@color/gold" />
+        <path
+            android:pathData="m363.156,376.063c30.168,0.723 58.359,-14.957 73.66,-40.969 15.297,-26.016 15.297,-58.273 0,-84.289 -15.301,-26.012 -43.492,-41.691 -73.66,-40.969 -5.641,0.004 -11.27,0.555 -16.801,1.648 -6.926,-32.023 -35.375,-54.789 -68.137,-54.535 -10.016,0.004 -19.918,2.145 -29.039,6.281 -16.066,-41.289 -59.043,-65.5 -102.68,-57.844s-75.805,45.047 -76.855,89.34c0.02,10.352 1.855,20.617 5.422,30.336 -27.145,0.16 -52.113,14.875 -65.402,38.547 -13.285,23.672 -12.848,52.652 1.156,75.91 14,23.254 39.406,37.207 66.543,36.543"
+            android:fillColor="#a3d4f7" />
+        <path
+            android:pathData="m328.121,408.063c0,17.672 -14.324,32 -32,32 -17.672,0 -32,-14.328 -32,-32 0,-24 32,-80 32,-80s32,56 32,80zM328.121,408.063"
+            android:fillColor="#60a2d7" />
+        <path
+            android:pathData="m248.121,328.063c0,17.672 -14.324,32 -32,32 -17.672,0 -32,-14.328 -32,-32 0,-24 32,-80 32,-80s32,56 32,80zM248.121,328.063"
+            android:fillColor="#60a2d7" />
+        <path
+            android:pathData="m176.121,424.063c0,17.672 -14.324,32 -32,32 -17.672,0 -32,-14.328 -32,-32 0,-24 32,-80 32,-80s32,56 32,80zM176.121,424.063"
+            android:fillColor="#60a2d7" />
+    </group>
 </vector>
