--- a/app/src/main/res/navigation/main_nav.xml
+++ b/app/src/main/res/navigation/main_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/favouriteLocations"
-        android:name="com.ramanhmr.weather.ui.screens.favourite.LocationsFavouriteFragment"
+        android:name="com.ramanhmr.weather.ui.screens.locations.LocationsFavouriteFragment"
         tools:layout="@layout/fragment_locations_favourite">
 
         <action
@@ -22,8 +22,8 @@
                 app:argType="string" />
             <argument
                 android:name="actionType"
-                app:argType="integer"
-                android:defaultValue="1" />
+                android:defaultValue="1"
+                app:argType="integer" />
         </action>
 
         <action
@@ -41,12 +41,17 @@
                 app:argType="float" />
             <argument
                 android:name="actionType"
-                app:argType="integer"
-                android:defaultValue="2" />
+                android:defaultValue="2"
+                app:argType="integer" />
         </action>
+
         <action
-            android:id="@+id/action_favouriteLocations_to_weather"
-            app:destination="@id/weather" />
+            android:id="@+id/toMap"
+            app:destination="@id/mapFragment"
+            app:enterAnim="@anim/slide_in_bottom"
+            app:exitAnim="@anim/slide_out_top"
+            app:popEnterAnim="@anim/slide_in_top"
+            app:popExitAnim="@anim/slide_out_bottom" />
     </fragment>
 
     <fragment
@@ -55,20 +60,20 @@
         tools:layout="@layout/fragment_weather">
         <argument
             android:name="actionType"
-            app:argType="integer"
-            android:defaultValue="0" />
+            android:defaultValue="0"
+            app:argType="integer" />
         <argument
             android:name="cityName"
-            app:argType="string"
-            android:defaultValue="" />
+            android:defaultValue=""
+            app:argType="string" />
         <argument
             android:name="lat"
-            app:argType="float"
-            android:defaultValue="1000" />
+            android:defaultValue="1000"
+            app:argType="float" />
         <argument
             android:name="lon"
-            app:argType="float"
-            android:defaultValue="1000" />
+            android:defaultValue="1000"
+            app:argType="float" />
 
         <action
             android:id="@+id/toLocationsFavourite"
@@ -79,5 +84,30 @@
             app:popExitAnim="@anim/slide_out_bottom"
             app:popUpTo="@id/favouriteLocations"
             app:popUpToInclusive="true" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/mapFragment"
+        android:name="com.ramanhmr.weather.ui.screens.map.MapFragment"
+        tools:layout="@layout/fragment_map">
+
+        <action
+            android:id="@+id/toWeatherByCoord"
+            app:destination="@id/weather"
+            app:enterAnim="@anim/slide_in_top"
+            app:exitAnim="@anim/slide_out_bottom"
+            app:popEnterAnim="@anim/slide_in_bottom"
+            app:popExitAnim="@anim/slide_out_top">
+            <argument
+                android:name="lat"
+                app:argType="float" />
+            <argument
+                android:name="lon"
+                app:argType="float" />
+            <argument
+                android:name="actionType"
+                android:defaultValue="2"
+                app:argType="integer" />
+        </action>
     </fragment>
 </navigation>
